v.1.1.4

Warning: your gear will have minus durability after this update possibly! 
Repair it first, because any hit will break it. This is because when max durability is reduced, so is current durability..

- special mob stats are now in entity configs instead of hardcoded
- made gear have similar durability to vanilla diamond gear. I gave it too much it seems
- repair station now sucks fuel only when needed
- added config to show area screen text
- added level distance penalty config
- added golem boss which you can summon same as a wither but: soul sand block > iron block and mob head > bone block.
- you now need material only gotten by the golem boss drops to craft the modify station. 
- added config that by default makes all players count as if teamed (PVE mode basically), disable for pvp servers
This should hopefully stop the bug reports of "I can't heal my friend". But whether i keep this as on by default depends on amount of pvp players.
- fixed +0 exp messages
- stopped mobs from spawning on daytime and made their spawn restrictions like vanilla mobs. So should be less spawns on nighttime too.

v.1.1.3
- fix day mobs config not working
- melee weapon spells can now be used on staffs too
- fix another server crash

v.1.1.2
- fix another server crash 

v.1.1.1

- fix server crash
- fixed spear of judgement missing textures

v.1.1.0 - 1.16.2 update + content additions!

WARNING: This update deletes all existing gear items! 
Unfortunately required because of the gear rework.
A clean start is recommended.

Also, update your library of exile.

This update is actually a combination of a few big updates:
- Crafting update
- Mob Update
- Area Update
- Food update

CRAFTING UPDATE:

All gears now have level ranges, so Old Boots would be lvl 0-10, but Royal boots lvl 40-50.
Each level range has its own material. You can now craft nearly all the gear of any level!
(exception are bows, crossbows and shields, sorry still waiting for fabric api to get those to work)
