@@ -3,6 +3,7 @@ v.1.1.4
 Warning: your gear will have minus durability after this update possibly! 
 Repair it first, because any hit will break it. This is because when max durability is reduced, so is current durability..
 
+- fixed server crash on casting spell
 - special mob stats are now in entity configs instead of hardcoded
 - made gear have similar durability to vanilla diamond gear. I gave it too much it seems
 - repair station now sucks fuel only when needed
